src/objects/loan_ffa__Dimension_Set__c.object
<CustomObject>
    <fields>
        <fullName>loan_ffa__Dimension1__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Value of Dimension if rule evaluates to true</description>
        <label>Dimension1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Dimension Sets</relationshipLabel>
        <relationshipName>Dimension_Evaluation_Rules</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Dimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Value of Dimension2 if rule evaluates to true</inlineHelpText>
        <label>Dimension2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipName>Dimension_Evaluation_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Dimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Value of Dimension3 if rule evaluates to true</inlineHelpText>
        <label>Dimension3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipName>Dimension_Evaluation_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Dimension Set</label>
    <listViews>
        <fullName>loan_ffa__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Dimension Set Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dimension Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>